reverted mobile breakpoint, resolved flexbox gap not working

--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -10,7 +10,7 @@ $footerHeightMobile: 120px;
 $heroMaxHeight: 700px;
 
 // BREAKPOINTS
-$mobile: 960px;
+$mobile: 920px;
 
 // from Material UI
 $xs: 0px;
